# gemini_rust

./: .env sample  .gitignore  Cargo.toml  ftm_settings.json  log4rs.yaml  log4rs_debug.yaml  settings.json  sol_settings copy.json  stocks.csv
src/: lib.rs
src/cratesdb/: mod.rs
src/gemini/: gemini_core.rs  gemini_websocket.rs  mod.rs  models.rs  orders.rs  process.rs
src/order_tracker/: mod.rs
src/util/: mod.rs
