[package]
name = "api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.21.5"
chrono = "0.4.31"
csv = "1.3.0"
dotenv = "0.15.0"
futures = {version="0.3.30"}
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
log4rs = "1.2.0"
log = "0.4.20"
native-tls = "0.2.11"
openssl-sys = "0.9.98"
openssl = { version = "0.10", features = ["vendored"] } 
postgres = "0.19.7"
postgres-openssl = "0.5.0"
postgres-types = "0.2.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
tungstenite = {version= "0.21.0",features=["native-tls"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
rust_decimal = "1.34.3"
rust_decimal_macros = "1.34.2"
http = "1.0.0"
async-tungstenite = "*"
thiserror = "1.0.57"





